...
    <string name="status_not_charging">未充电</string>
    <string name="status_network_wifi">WiFi</string>
    <string name="status_network_mobile">4G</string>
    <string name="status_network_none">无网</string>
    <string name="status_bluetooth_on">蓝牙开</string>
    <string name="status_bluetooth_off">蓝牙关</string>
    <string name="status_online">在线</string>
    <string name="status_offline">离线</string>
    <string name="status_on">开</string>
    <string name="status_off">关</string>
    <string name="label_online">在线状态</string>
    <string name="label_battery">电量</string>
    <string name="label_charging">充电</string>
...
